--- a/src/snippets/components/filter/range-s/_range-s.jade
+++ b/src/snippets/components/filter/range-s/_range-s.jade
@@ -11,6 +11,6 @@
       span.range-s__text-currency руб
     .form-group
       label.control-label(for='nonbudget') В том числе проекты с неуказанным бюджетом
-      input#nonbudget.form-control(type='text', placeholder='', name='nonbudget')
+      input#nonbudget.form-control(type='checkbox', name='nonbudget')
   #range-s__slider.range-s__slider(min='0', max='100000') slider
 // END $range-s
