--- a/src/snippets/components/proj-l/_proj-l.jade
+++ b/src/snippets/components/proj-l/_proj-l.jade
@@ -1,7 +1,7 @@
 // BEGIN $proj-l
 .proj-l
   .proj-l__item.proj-l__item--paid-up
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -21,7 +21,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item.proj-l__item--hot
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -41,7 +41,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item.opened
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -61,7 +61,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -81,7 +81,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -101,7 +101,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item.proj-l__item--hot
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -121,7 +121,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item.proj-l__item--paid-up.proj-l__item--hot.opened
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -141,7 +141,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -161,7 +161,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
@@ -181,9 +181,9 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item.proj-l__item--hot
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии Написание рефератов и курсовой по физики и химии
     .proj-l__price
-      span.proj-l__price-value 2000
+      span.proj-l__price-value.proj-l__price-value--nonbudget По договоренности
       span.proj-l__price-currency руб
     .proj-l__content
       ul.proj-l__links
@@ -201,7 +201,7 @@
           a.proj-l__link(href=link) Ответить на заказ
           span.proj-l__respond (4)
   .proj-l__item.opened
-    a.proj-l__title(href=link) Написание рефератов и курсовой по физики и химии
+    a.proj-l__title(href=link): span.proj-l__title-in Написание рефератов и курсовой по физики и химии
     .proj-l__price
       span.proj-l__price-value 2000
       span.proj-l__price-currency руб
