--- a/src/snippets/components/header/_header.jade
+++ b/src/snippets/components/header/_header.jade
@@ -1,23 +1,28 @@
 // BEGIN $header
 .header.cf
-  a.header__btn(href=link)
-    i.ico.ico__notice
-    span.header__btn-text События
-    span.header__btn-counter 5
-  a.header__btn(href=link)
+  if pagename == 'index'
+    a.btn-q(href=link)
+      i.ico.ico__notice
+      span.btn-q__t События
+      span.btn-q__counter 5
+  if pagename == 'order'
+    a.btn-q(href=link)
+      i.ico.ico__envelope
+      span.btn-q__t Сообщения
+  a.btn-q(href=link)
     i.ico.ico__list
-    span.header__btn-text Мои заказы
-  a.header__btn.header__btn--notext(href=link, title='Статистика'): i.ico.ico__stats
+    span.btn-q__t Мои заказы
+  a.btn-q.btn-q--notext(href=link, title='Статистика'): i.ico.ico__stats
   .header__btn-row
-    a.header__btn.header__btn--notext(href=link, title='Корзина'): i.ico.ico__cart
-    a.header__btn(href=link)
+    a.btn-q.btn-q--notext(href=link, title='Корзина'): i.ico.ico__cart
+    a.btn-q(href=link)
       i.ico.ico__rub
-      span.header__btn-text 52
-    a.header__btn(href=link): span.header__btn-text Купить PRO
+      span.btn-q__t 52
+    a.btn-q(href=link): span.btn-q__t Купить PRO
   .header__btn-row.header__btn-row--right
-    a.header__btn(href=link)
+    a.btn-q(href=link)
       i.ico.ico__user
-      span.header__btn-text.header__btn-text--lsh Simpleusername
-    a.header__btn.header__btn--notext(href=link, title='Настройки'): i.ico.ico__gear
-    a.header__btn.header__btn--notext(href=link, title='Выход'): i.ico.ico__exit
+      span.btn-q__t.btn-q__t--lsh Simpleusername
+    a.btn-q.btn-q--notext(href=link, title='Настройки'): i.ico.ico__gear
+    a.btn-q.btn-q--notext(href=link, title='Выход'): i.ico.ico__exit
 // END $header
