--- a/src/snippets/sections/main/_main.jade
+++ b/src/snippets/sections/main/_main.jade
@@ -10,4 +10,13 @@ main.main
   if pagename == 'order'
     include ../../components/profile/_profile
     include ../../components/proj-v/_proj-v
+    include ../../components/answer-p/_answer-p
+    include ../../components/reply-p/_reply-p
+  if pagename == 'user-type'
+    include ../../components/user-t/_user-t
+  if pagename == 'catalog'
+    include ../../components/carousel/_carousel
+    include ../../components/filter/_filter
+    include ../../components/user-cat/_user-cat
+    include ../../components/pagination/_pagination
 // END $main
