--- a/src/snippets/style.scss
+++ b/src/snippets/style.scss
@@ -24,4 +24,9 @@
 /**/@import "components/profile/p-state/p-state";
 /**/@import "components/profile/p-user/p-user";
 /**/@import "components/proj-v/proj-v";
+/**/@import "components/answer-p/answer-p";
+/**/@import "components/reply-p/reply-p";
+/**/@import "components/reply-p/r-price/r-price";
+/**/@import "components/user-t/user-t";
+/**/@import "components/user-cat/user-cat";
 @import "sections/footer/footer";
