--- a/src/snippets/bootstrap.scss
+++ b/src/snippets/bootstrap.scss
@@ -1,7 +1,6 @@
 @import "../bower_components/bootstrap-sass-master/assets/stylesheets/bootstrap/mixins/buttons";
 
-
-$btn-default-color:              #fff;
+$btn-default-color: #fff;
 $brand-info: #279ef1;
 $brand-info-light: #2fcbe2;
 $brand-success: #3abc00;
@@ -21,6 +20,7 @@ $btn-success-darken-border: darken($btn-success-darken-bg, 5%);
 .btn-success-darken {
   @include button-variant($btn-success-darken-color, $btn-success-darken-bg, $btn-success-darken-border);
 }
+
 //danger-1
 $btn-danger-1-color: #fff;
 $btn-danger-1-bg: $brand-danger-1;
@@ -28,6 +28,7 @@ $btn-danger-1-border: darken($btn-danger-1-bg, 5%);
 .btn-danger-1 {
   @include button-variant($btn-danger-1-color, $btn-danger-1-bg, $btn-danger-1-border);
 }
+
 //danger-2
 $btn-danger-2-color: #fff;
 $btn-danger-2-bg: $brand-danger-2;
@@ -35,6 +36,7 @@ $btn-danger-2-border: darken($btn-danger-2-bg, 5%);
 .btn-danger-2 {
   @include button-variant($btn-danger-2-color, $btn-danger-2-bg, $btn-danger-2-border);
 }
+
 //danger-3
 $btn-danger-3-color: #fff;
 $btn-danger-3-bg: $brand-danger-3;
@@ -42,6 +44,7 @@ $btn-danger-3-border: darken($btn-danger-3-bg, 5%);
 .btn-danger-3 {
   @include button-variant($btn-danger-3-color, $btn-danger-3-bg, $btn-danger-3-border);
 }
+
 //warning-light
 $btn-warning-light-color: #fff;
 $btn-warning-light-bg: $brand-warning-light;
@@ -49,6 +52,7 @@ $btn-warning-light-border: darken($btn-warning-light-bg, 5%);
 .btn-warning-light {
   @include button-variant($btn-warning-light-color, $btn-warning-light-bg, $btn-warning-light-border);
 }
+
 //warning-darken
 $btn-warning-darken-color: #fff;
 $btn-warning-darken-bg: $brand-warning-darken;
@@ -56,6 +60,7 @@ $btn-warning-darken-border: darken($btn-warning-darken-bg, 5%);
 .btn-warning-darken {
   @include button-variant($btn-warning-darken-color, $btn-warning-darken-bg, $btn-warning-darken-border);
 }
+
 //violet
 $btn-violet-color: #fff;
 $btn-violet-bg: $brand-violet;
@@ -63,6 +68,7 @@ $btn-violet-border: darken($btn-violet-bg, 5%);
 .btn-violet {
   @include button-variant($btn-violet-color, $btn-violet-bg, $btn-violet-border);
 }
+
 //info-light
 $btn-info-light-color: #fff;
 $btn-info-light-bg: $brand-info-light;
@@ -70,6 +76,7 @@ $btn-info-light-border: darken($btn-info-light-bg, 5%);
 .btn-info-light {
   @include button-variant($btn-info-light-color, $btn-info-light-bg, $btn-info-light-border);
 }
+
 //gray
 $btn-gray-color: #fff;
 $btn-gray-bg: $brand-gray;
@@ -80,5 +87,19 @@ $btn-gray-border: darken($btn-gray-bg, 5%);
 
 $padding-base-vertical: 5px;
 $font-size-base: 16px;
+$input-border: #c3c3c3;
 
 @import "../bower_components/bootstrap-sass-master/assets/stylesheets/bootstrap";
+
+.form-control {
+  &:focus {
+    border: 1px solid #DFB031;
+    box-shadow: 0 3px 0 rgba(255, 255, 255, 0.18), inset 0 3px 0 rgba(206, 140, 0, 0.33), 0 0 0 3px rgba(248, 199, 67, 0.75);
+//    box-shadow: 0 3px 0 rgba(255, 255, 255, 0.18), inset 0 3px 0 rgba(162, 162, 162, 0.33), 0 0 0 3px rgba(223, 223, 223, 0.75);
+  }
+}
+
+label {
+  margin-bottom: 0;
+  font-weight:   normal;
+}
