--- a/src/snippets/components/filter/_filter.scss
+++ b/src/snippets/components/filter/_filter.scss
@@ -71,6 +71,12 @@
     border-bottom: 11px solid #f4f4f4;
     border-left:   11px solid transparent;
   }
+  .control-label, .form-control {
+    display:       inline;
+    margin-bottom: 0;
+    outline:       none !important;
+    box-shadow:    none;
+  }
 }
 
 .filter__row {
@@ -110,22 +116,20 @@
   margin-bottom:    12px;
   padding:          0 8px 0 24px;
   height:           2.6rem;
+  outline:          none !important;
   border:           1px solid #d1d1d1;
   border-radius:    2px;
   background-image: linear-gradient(to top, #ededed 0%, #fff 100%);
   box-shadow:       0 2px 0 rgba(0, 0, 0, 0.06);
-  color:            #363636;
+  color:            #363636 !important;
   font-weight:      bold;
   font-size:        1.4rem;
   line-height:      2.4rem;
-  &:before {
+  .ico__plus {
+    @extend .ico__plus;
     @extend %pseudoBeforeAfter;
-    top:               7px;
-    left:              10px;
-    width:             10px;
-    height:            10px;
-    background-image:  url("../images/sprite/ico__plus.png");
-    background-repeat: no-repeat;
+    top:  7px;
+    left: 10px;
   }
 }
 
@@ -142,21 +146,21 @@
   border:           none;
   border-radius:    3px;
   background-color: #e1e1e1;
+  box-shadow:       none !important;
   color:            #363636;
   font-size:        1.4rem;
   line-height:      2.6rem;
+  cursor:           default;
   &:hover {
-    background-color: darken(#e1e1e1, 5%);
+    color: #363636;
   }
-  &:before {
+  .ico__close {
+    @extend .ico__close;
     @extend %pseudoBeforeAfter;
-    top:               9px;
-    right:             8px;
-    left:              auto;
-    width:             9px;
-    height:            9px;
-    background-image:  url("../images/sprite/ico__close.png");
-    background-repeat: no-repeat;
+    top:    9px;
+    right:  8px;
+    left:   auto;
+    cursor: pointer;
   }
 }
 
@@ -177,9 +181,10 @@ $ct-col: 960;
     }
   }
   &--3 {
-    width: perc(210, $ct-col);
+    width: perc(220, $ct-col);
     .form-control {
-      width: 100%;
+      display: block;
+      width:   100%;
     }
   }
   .form-group {
@@ -265,20 +270,16 @@ $ct-col: 960;
   }
 }
 
-
-
 .filter__ico-pro {
   @extend .ico__pro;
   display: block;
   float:   left;
 }
 
-
-
 .filter__ico-verifed {
   @extend .ico__verifed;
-  display:           block;
-  float:             left;
+  display: block;
+  float:   left;
 }
 
 .filter__submit {
