--- a/src/snippets/components/profile/p-user/_p-user.scss
+++ b/src/snippets/components/profile/p-user/_p-user.scss
@@ -5,6 +5,9 @@
   float:        left;
   padding-top:  8px;
   padding-left: 30px;
+  .reply-p & {
+    padding-left: 10px;
+  }
 }
 
 .p-user__ava {
@@ -67,6 +70,9 @@
   margin-right: 4px;
   color:        #ff7200;
   font-size:    1.4rem;
+  .reply-p & {
+    color: #1992ca;
+  }
 }
 
 .p-user__verifed {
