--- a/src/snippets/components/proj-v/_proj-v.scss
+++ b/src/snippets/components/proj-v/_proj-v.scss
@@ -6,6 +6,8 @@
   padding:       21px 40px 24px;
   border-bottom: 6px solid #d3d3d3;
   &__col-left {
+    position:      relative;
+    overflow:      hidden;
     margin-right:  200px;
     padding-right: 40px;
     width:         auto;
@@ -13,6 +15,39 @@
   &__col-right {
     float: right;
     width: 200px;
+    .btn-q {
+      margin-top: 12px;
+      min-width:  154px;
+    }
+  }
+  &__price {
+    @extend %font--alpha;
+    margin-top:  4px;
+    font-size:   2.4rem;
+    line-height: 2.6rem;
+    &-value {
+      padding-left: 8px;
+    }
+    &-value, &-currency {
+      display: inline-block;
+      color:   #d80c0c;
+    }
+    &-currency {
+      padding-left: 6px;
+    }
+  }
+  &__date {
+    margin-top:    7px;
+    margin-bottom: 45px;
+    color:         #353535;
+    font-size:     1.4rem;
+    line-height:   1.6rem;
+  }
+  .ico__ban {
+    margin-top: 0;
+    & + .btn-q__t {
+      font-size: 1.4rem;
+    }
   }
   &__title {
     margin:      0;
@@ -25,7 +60,7 @@
     @extend %font--alpha;
     clear:       both;
     overflow:    hidden;
-    padding:     8px 0 22px;
+    padding:     16px 0 22px;
     font-size:   1.6rem;
     line-height: 1.8rem;
     &-item {
@@ -67,6 +102,9 @@
     padding-left:  44px;
     outline:       none !important;
     box-shadow:    none !important;
+    &--no-close {
+      padding-right: 10px;
+    }
     .ico {
       position: relative;
       top:      50%;
@@ -154,6 +192,28 @@
     color:          #565656;
     font-size:      1.8rem;
     line-height:    2.2rem;
+  }
+}
+
+// $socials-list
+.socials-list {
+  @extend %mlp;
+  clear:      both;
+  overflow:   hidden;
+  padding-top: 24px;
+  &__item {
+    float:         left;
+    padding-right: 5px;
+  }
+  &__link {
+    display: block;
+    width:   16px;
+    height:  16px;
+  }
+  .ico {
+    display: block;
+    width:   16px;
+    height:  16px;
   }
 }
 
