--- a/src/snippets/pages/_scripts.jade
+++ b/src/snippets/pages/_scripts.jade
@@ -1,6 +1,10 @@
+//script(src='bower_components/angular/angular.js')
+//script(src='bower_components/angular-animate/angular-animate.js')
+//script(src='bower_components/angular-strap/dist/angular-strap.min.js')
+//script(src='bower_components/angular-strap/dist/angular-strap.tpl.min.js')
 //- BEGIN scripts
 //-script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 //-script.
-  -window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.js"><\/script>')
+  -window.jQuery || document.write('script(src='bower_components/jquery/dist/jquery.js'><\/script>')
 //-script(src = 'scripts/scripts.js')
 //- END scripts
