--- a/src/snippets/sections/sidebar/_sidebar.scss
+++ b/src/snippets/sections/sidebar/_sidebar.scss
@@ -99,18 +99,25 @@
   overflow: hidden;
   padding:  0 20px 18px;
   .form-group {
-    position:   relative;
-    z-index:    2;
-    padding:    10px 40px 0 10px;
-    height:     40px;
-    background: #434343;
+    position:      relative;
+    z-index:       2;
+    display:       block;
+    clear:         both;
+    overflow:      hidden;
+    margin-bottom: 0;
+    padding:       11px 40px 0 10px;
+    height:        40px;
+    background:    #434343;
   }
   .form-control {
     @extend %font--alpha;
+    display:     block;
+    padding:     0;
     height:      1.8rem;
-    outline:     none;
+    outline:     none !important;
     border:      none;
     background:  none;
+    box-shadow:  none !important;
     color:       #888;
     font-size:   1.4rem;
     line-height: 1.8rem;
